Fixed extension download icon not showing

--- a/src/index.styl
+++ b/src/index.styl
@@ -69,6 +69,8 @@ topcontent-padding = 8px
     display: none
     &.visible
       display: block
+      @media (max-width: 600px)
+        display: none
   #chrome-extension-icon
     svg
       transform: scale(0.85)
